--- a/1. I am NOT  a Robot/index.html
+++ b/1. I am NOT  a Robot/index.html
@@ -15,7 +15,7 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <div id="ext-container">
+    <div id="ext-container" class="flex-col align-center">
       <h1>
         Select the hexadecimal color:<span id="select_color"></span>for
         verification!
@@ -30,15 +30,15 @@
       </form>
 
       <main id="container" class="grid">
-        <div class="element"><span></span></div>
-        <div class="element"><span></span></div>
-        <div class="element"><span></span></div>
-        <div class="element"><span></span></div>
-        <div class="element"><span></span></div>
-        <div class="element"><span></span></div>
-        <div class="element"><span></span></div>
-        <div class="element"><span></span></div>
-        <div class="element"><span></span></div>
+        <div class="element"><span>a</span></div>
+        <div class="element"><span>b</span></div>
+        <div class="element"><span>c</span></div>
+        <div class="element"><span>d</span></div>
+        <div class="element"><span>e</span></div>
+        <div class="element"><span>f</span></div>
+        <div class="element"><span>g</span></div>
+        <div class="element"><span>h</span></div>
+        <div class="element"><span>i</span></div>
       </main>
     </div>
   </body>
