--- a/1. I am NOT  a Robot/index.html
+++ b/1. I am NOT  a Robot/index.html
@@ -23,10 +23,10 @@
 
       <form action="success.html" class="flex-col">
         <div>
-          <input type="checkbox" id="are-you" />
+          <input type="checkbox" id="are-you" disabled />
           <label for="are-you">Are you Human?</label>
         </div>
-        <button class="btn btn-light" type="submit">Submit</button>
+        <button class="btn btn-light" type="submit" disabled>Submit</button>
       </form>
 
       <main id="container" class="grid">
