Proyect 4. Digital Clock v1.0 DONE

--- a/4. Digital Clock Interchangeable Background/index.html
+++ b/4. Digital Clock Interchangeable Background/index.html
@@ -8,9 +8,9 @@
     <script src="clock.js" defer></script>
   </head>
   <body>
-    <div class="container flex-col">
+    <div id="clock-container" class="container flex-col">
       <h1 id="time"><span id="am-pm"></span></h1>
-      <p>Good morning, Francisco<span id="msg"></span></p>
+      <p id="user-msg"></p>
       <div class="focus-container">
         <form class="flex-col">
           <label for="focus-input">What is your focus?</label>
